--- a/Webscraping/century21.ipynb
+++ b/Webscraping/century21.ipynb
@@ -2,31 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
-    "from bs4 import BeautifulSoup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import pandas\n",
+    "\n",
     "r = requests.get(\"http://www.pyclass.com/real-estate/rock-springs-wy/LCWYROCKSPRINGS/\", headers={'User-agent': 'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:61.0) Gecko/20100101 Firefox/61.0'})\n",
-    "c = r.content\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soup = BeautifulSoup(c, \"html.parser\")"
+    "c = r.content\n",
+    "\n",
+    "soup = BeautifulSoup(c, \"html.parser\")\n",
+    "\n",
+    "all = soup.find_all(\"div\", {\"class\": \"propertyRow\"})\n",
+    "\n",
+    "all[0].find(\"h4\", {\"class\": \"propPrice\"}).text.replace(\"\\n\", \"\").replace(\" \", \"\")\n",
+    "\n",
+    "page_no = soup.find_all(\"a\", {\"class\": \"Page\"})[-1].text\n",
+    "\n",
+    "l = []\n",
+    "base_url = \"http://www.pyclass.com/real-estate/rock-springs-wy/LCWYROCKSPRINGS/t=0&s=\"\n",
+    "for page in range(0, int(page_no)*10, 10):\n",
+    "    #print(base_url + str(page) + \".html\")\n",
+    "    r = requests.get(base_url + str(page) + \".html\", headers={'User-agent': 'Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:61.0) Gecko/20100101 Firefox/61.0'} )\n",
+    "    c = r.content\n",
+    "    soup = BeautifulSoup(c, \"html.parser\")\n",
+    "    all = soup.find_all(\"div\", {\"class\": \"propertyRow\"})\n",
+    "    \n",
+    "    for item in all:\n",
+    "        d = {}\n",
+    "        d[\"Address\"] = item.find_all(\"span\", {\"class\": \"propAddressCollapse\"})[0].text\n",
+    "        try:\n",
+    "            d[\"Locality\"] = item.find_all(\"span\", {\"class\": \"propAddressCollapse\"})[1].text\n",
+    "        except:\n",
+    "            d[\"Locality\"] = None\n",
+    "        d[\"Price\"] = item.find(\"h4\", {\"class\", \"propPrice\"}).text.replace(\"\\n\", \"\").replace(\" \", \"\")\n",
+    "        try:\n",
+    "            d[\"Beds\"] = item.find(\"span\", {\"class\": \"infoBed\"}).find(\"b\").text\n",
+    "        except:\n",
+    "            d[\"Beds\"] = None\n",
+    "        try:\n",
+    "            d[\"Full Baths\"] = item.find(\"span\", {\"class\": \"infoValueFullBath\"}).find(\"b\").text\n",
+    "        except:\n",
+    "            d[\"Full Baths\"] = None\n",
+    "        try:\n",
+    "            d[\"Area\"] = item.find(\"span\", {\"class\": \"infoSqFt\"}).find(\"b\").text\n",
+    "        except:\n",
+    "            d[\"Area\"] = None\n",
+    "        try:\n",
+    "            d[\"Half Baths\"] = item.find(\"span\", {\"class\": \"infoValueHalfBath\"}).find(\"b\").text\n",
+    "        except:\n",
+    "            d[\"Half Baths\"] = None\n",
+    "\n",
+    "        for column_group in item.find_all(\"div\", {\"class\":\"columnGroup\"}):\n",
+    "            #print(column_group)\n",
+    "            for feature_group, feature_name in zip(column_group.find_all(\"span\", {\"class\": \"featureGroup\"}), column_group.find_all(\"span\", {\"class\": \"featureName\"})):\n",
+    "                #print(feature_group.text, feature_name.text)\n",
+    "                if \"Lot Size\" in feature_group.text:\n",
+    "                    d[\"Lot Size\"] = feature_name.text\n",
+    "\n",
+    "        l.append(d)\n",
+    "\n",
+    "df = pandas.DataFrame(l)\n",
+    "\n",
+    "df.to_csv(\"Output.csv\")"
    ]
   }
  ],
@@ -46,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
